# int20h-2022-test

./: README.md  docker-compose.yml
api/api/: .gitignore  pom.xml
api/api/src/main/java/com/api/api/: ApiApplication.java  Bucket.java  Fridge.java  FridgeRepository.java  Ingredient.java  Meal.java  User.java  UserRepository.java
api/api/src/main/resources/: application.properties
api/api2/: Dockerfile  pom.xml
api/api2/src/main/resources/: application.properties
site/: pyproject.toml
website/: .dockerignore  Dockerfile  pyproject.toml
website/front-dummy/: DishBasePage.html  DishInfoPage.html  FridgePage.html  WishList.html
website/front-dummy/css/: unique.css
website/recipes/: admin.py  models.py  urls.py  views.py
website/recipes/management/commands/: syncwiththemealdb.py
website/recipes/migrations/: 0001_initial.py  0002_alter_ingredient_category_themealdbmeal_and_more.py  0003_themealdbingredientcategory.py  0004_ingredient_small_image_url_meal_small_image_url.py  0005_meal_add_fulltext_index.py  0006_user_fridge_basket.py
website/recipes/static/recipes/css/: unique.css
website/recipes/static/recipes/js/: api.js  fridge.js  main.js
website/recipes/templates/recipes/: base.html  basket.html  ingredient_list.html  meal_detail.html  meal_list.html
website/recipes/templatetags/: recipes_extras.py
website/recipes/utils/: serializers.py
website/recipes/utils/themealdb_synchronizer/: __init__.py  constants.py  db.py  synchronizer.py  themealdbapi.py  typehints.py  utils.py
website/website/: settings.py  urls.py
(+36 files in other folders)
